public/main.css
/* generics */

html {
    font-family: ubuntu, helvetica, arial, sans-serif;
    font-weight: 400;
    background-color: #F7F7F7;
    color: #333;
}

body {
    margin: 0;
}

img {
    max-width: 100%;
    height: auto;
}

*, *:before, *:after {
    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
}

a {
    color: #3B5998;
    text-decoration: none;
}

a:visited {
    color: #8496bc;
}

input, textarea, button {
    font-family: inherit;
    font-size: inherit;
}

button {
    cursor: pointer;
}

.button {
    width: 3em;
    padding-left: 0em !important;
    padding-right: 0em !important;
}

textarea {
    /* textarea-borders else might differ from input-boxes in chrome */
    -moz-appearance: textfield;
    -webkit-appearance: textfield;
}

/* specifics */

#login, #index {
    max-width: 40em;
    margin: auto;
    padding-left: 20%;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#login {
    padding-left: 0;
    
}

#logo {
    max-height: 5em;
    display: inline;
}

#login > div {
    display: inline-block;
}

#login h1, #index h1 {
    font-weight: 400;
    display: inline-block;
    vertical-align: top;
}

#feeds {
    display: inline-block;
    vertical-align: top;
    width: 20%;
    height: 100%;
    overflow: auto;
    box-shadow: 3px 3px 5px 0px #996E6E;
    position: fixed;
    border-left: 1px solid #f22f49;
}

#feedList {
    vertical-align: top;
    margin-top: 0;
    margin-bottom: 0;
    padding-left: 1.6em;
    padding-left: 0;
    
}

#mobileList {
    display: none;
}

#feedList a {
    color: #333;
    outline: none;
}

#feedList a:focus {
    color: #f22f49 !important;
}

#feedList li {
    list-style-type: none;
    padding-left: 1.6em;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
    border-bottom: 1px solid #E5E5E5;
}

#feedList a {
    padding-top: 0.3em;
    padding-bottom: 0.3em;
    display: block;
}

#feedList li.current {
    background-color: #E5E5E5;
}

#entries {
    display: inline-block;
    margin: auto;
    width: 100%;
    padding-left: 20%;
}

.entry {
    max-width: 700px;
    padding-left: 1em;
    padding-right: 1em;
    margin: auto;
    margin-top: 3em;
    list-style-type: none;
}

.current.entry {
    list-style-image: url(circle.svg);
}

.current li {
    list-style-image: none;
}

.entryTitle a {
    color: #333;
    font-weight: 400;
}

.entryDate {
    font-weight: 400;
    float: right;
    margin: 0;
    font-size: 1rem;
    color: #7F7F7F;
}

.entry pre {
    white-space: pre-wrap;
    word-wrap: break-word;
}

#superfeedr li {
    list-style-type: none;
}

#readall {
    float: right;
    padding: 1em;
}

#feedReadall {
    float: right;
    padding: 1em;
}

.read {
    color: transparent;
    border: 1px solid transparent;
    stop-color: transparent;
}

.readIcon:after {
    content: " \2713";
    color: #8DCC14;
}

.mark {
    display: inline;
}

#markLink {
    color: #333;
    display: block;
    padding-top: 1.4em;
    padding-bottom: 1em;
    padding-left: 1.6em;
    border-bottom: 1px solid #E5E5E5;
}

#markLink.current {
    background-color: #E5E5E5;
}

#feeds li:hover,
#feeds a:hover {
    background-color: white;
}


#addLink {
    font-size: 1.4em;
    font-weight: bold;
    padding-left: 1em;
    padding-bottom: 0.2em;
    padding-top: 0.2em;
    color: #333;
    display: block;
}

#unsubscribeForm,
#addForms,
#exportForm,
#superfeedrForm,
#clientForm,
#userForm  {
    padding-top: 2em;
    padding-left: 2em;
}

#addForms  {
    display: table;
    table-layout: fixed;
}

#addForms form,
#addForms hr {
    display: table-row;
}

#addForms hr {
    height: 1em;
}

#addForms label,
#addForms input,
#addForms button {
    display: table-cell;
}

#addForms label {
    padding-right: 1em;
}

#addForms button {
    margin-left: 1em;
}

#addForms input {
    width: 80%;
}

#unsubscribeList {
    margin-left: 1em;
}

#unsubscribeSubmit {
    margin-bottom: 2em;
    margin-left: 1em;
}

#moreEntries {
    display: block;
    width: 100%;
    text-align: center;
    background-color: rgba(0,0,0, 0.1);
    padding-top: 0.2em;
    padding-bottom: 0.2em;
    margin: auto;
}

#moreEntries:hover {
     background-color: rgba(100,100,100, 0.1);
}

#installer {
    margin: auto;
    max-width: 40em;
    width: 100%;
}

#installer #login {
    margin: 0;
    padding-top: 2em;
    margin-bottom: 3em;
}

#superfeedrSettings label {
    display: block;
}

#superfeedrSettings label span {
    min-width: 8em;
}

#superfeedrSettings input {
    margin-left: 2em;
}

#superfeedrSettings button {
    margin-top: 1em;
    margin-bottom: 2em;
}

@media (max-width: 800px) {
    #feeds > * {
        display: none;
    }
    #mobileList {
        display: block;
        margin: auto;
        margin-top: 0.1em;
    }
    #markLink {
        display: none !important;
    }
    #feeds {
        display: block;
        max-width: 100%;
        width: 100%;
        height: auto;
        overflow: visible;
        padding-bottom: 0.3em;
        min-width: 400px;
        background-color: white;
    }
    #entries {
        width: 100%;
        padding-left: 0.2em;
    }
    #readFeed {
        position: fixed;
        top: 0.1em;
        right: 1em;
    }
    @media (max-width: 530px) {
        #readFeed {
            display: none;
        }
        #mobileList {
            margin-left: 0.1em;
        }
    }
}

#settingsNav li {
    display: inline-block;
    width: 10em;
    border: 1px solid #f22f49;
    box-shadow: 3px 3px 5px 0px #996E6E;
    margin: 0;
    padding: 0.3em;
}

#settingsNav li.current {
    color: #717171;
    box-shadow: 2px 2px 5px 0px #996E6E;
}

#settingsNav a {
    color: #333;
}

#settingsNav a:focus {
    color: #f22f49 !important;
}
/* ... */

